5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1644_1054.log
== TEST (2019-04-16 13:41:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= input()
y= input()
r= 3-2*x
if(y==r):
	print('ponto pertence a reta')
else
   print('ponto nao pertence a reta)
-- ERROR:
File "XXXX", line 9
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:41:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= input()
y= input()
r= 3-2*x
if(y==r):
	print('ponto pertence a reta')
else:
   print('ponto nao pertence a reta)
-- ERROR:
File "XXXX", line 10
    print('ponto nao pertence a reta)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:41:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= input()
y= input()
r= 3-2*x
if(y==r):
	print('ponto pertence a reta')
else:
   print('ponto nao pertence a reta)
-- ERROR:
File "XXXX", line 10
    print('ponto nao pertence a reta)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:51:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= int(input())
y= int(input())
r= 3-2*x
if(y==r):
	print('ponto pertence a reta')
else:
   print('ponto nao pertence a reta)
-- ERROR:
File "XXXX", line 10
    print('ponto nao pertence a reta)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:53:13) 
-- CODE:
x= int(input())
y= int(input())
r= 3-2*x
if(y==r):
	print('ponto pertence a reta')
else:
   print('ponto nao pertence a reta)
-- ERROR:
File "XXXX", line 7
    print('ponto nao pertence a reta)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:57:31) 
-- CODE:
x= int(input())
y= int(input())
r= 3-2*x
if(y==r):
	print(ponto pertence a reta')
else:
   print('ponto nao pertence a reta')
-- ERROR:
File "XXXX", line 5
    print(ponto pertence a reta')
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:57:49) 
-- CODE:
x= int(input())
y= int(input())
r= 3-2*x
if(y==r):
	print('ponto pertence a reta')
else:
   print('ponto nao pertence a reta')
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:00:15) 
-- CODE:
x= int(input())
y= int(input())
r= 3-2*x
if(y==r):
	print('ponto pertence a reta')
else:
   print('ponto nao pertence a reta')
-- EXECUTION TIME:
0.117449
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
